--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basketball</title>
     <link href="style/style.css" rel="stylesheet" type="text/css" />
-    
+
    </head>
-   <header> H O O P S ! 
+   <header> H O O P S !
       <nav>
         <a href="https://www.youtube.com/watch?v=9JYkp4VkOwY" target="_blank" rel="nofollow" style="text-decoration: none" >Basketball Bloopers</a> • <a href="https://www.youtube.com/watch?v=bwn6GhBqzKU" target="_blank" rel="nofollow" style="text-decoration: none" >Basketball Fights</a>  </nav>
    </header>
 
-   
+
   <body>
 <a name="top"></a>
 <a name="Home"></a>
-<h1 style="text-align: center;"> Basketball </h1>
+<h1 style="text-align: center;"> basketball </h1>
 
 <a href="#form"> Woah too fast! Back to top!</a>
 
@@ -32,7 +32,7 @@
  <table>
 
   <tr>
-  <th>Name </th> 
+  <th>Name </th>
   <th>Country </th>
   </tr>
   <tr>
@@ -44,7 +44,7 @@
   <td> <img src= "images/MERICA.png" width = "4%"> </img> </td>
  </tr>
 
- 
+
  </table>
 
 
@@ -69,12 +69,12 @@
 </ul>
 <div>
 <a href="#top"> Woah too fast! Back to top!</a>
-</div> 
+</div>
 
 <h2 "text-align: center;"> Sign up for your nearest league</h2>
 <!--Distance-->
-  What is your zip code? 
-  <input name ="distance" placeholder = "Only SF zip codes" type = "text">  
+  What is your zip code?
+  <input name ="distance" placeholder = "Only SF zip codes" type = "text">
   <br>
   </input>
 <!--drowpdown menu-->
@@ -86,12 +86,12 @@
        </select>
           </br>
 
-  Find gyms near me! <a href="https://sfrecpark.org/recreation-community-services/rec-facilities/" target="_blank" rel="nofollow">  <input type="submit" value="Go!"> 
+  Find gyms near me! <a href="https://sfrecpark.org/recreation-community-services/rec-facilities/" target="_blank" rel="nofollow">  <input type="submit" value="Go!">
   </input> </a>
 <h2>
   Don't want to join a team? No problem!
 </h2>
-    
+
 <ol>
   <li> Find a gym. In the city of San Francisco there are many recreation centers that offer a basketball gym. Take a look <a href= "https://sfrecpark.org/recreation-community-services/rec-facilities/"> here. </a> </li>
   <li> Don't live near a gym? Here's some of the best spots in San Francisco to <a href= "https://www.sfstation.com/guides/hoops-guide-16-best-basketball-courts-in-san-francisco/near you!"> play ball. </a> </li>
